  to allow programmers to specify which type constructor's values the inst
  is meant for. At that time, these functioned only as documentation,
  but the compiler now reports error messages for situations in which
  an inst that was declared to be intended for values of one type constructor
  is applied to values of another type constructor.

Portability improvements
------------------------

* We have ported Mercury to Linux AArch64 (ARM64) systems.

* The `tools/configure_mingw_cross` script has been replaced by
  `tools/configure_cross`. It now supports aarch64-linux-gnu and
  aarch64-linux-musl as targets (i.e. Linux on aarch64 with GNU or
  musl C libraries).

Changes to the Mercury debugger
-------------------------------

* The `list` command may now call an external command to print source listings;
  the command is set using `list_cmd`.  For example, the command could
  produce syntax highlighted source listings.

* We have removed support for browsing terms as XML (`browse --xml`)
  as it was unmaintained and did not work any more. The `browse --web`
  command provides an alternative method for interactively exploring a term.


NEWS for Mercury 20.06.1
========================

This is a bug-fix release.

* [Mantis bug #519]. We have deleted an old workaround from the Tcl/Tk
  binding in the extras that causes linking errors with recent versions
  of Tcl/Tk.

* [Mantis bug #514]. We have fixed a bug that caused linking errors
  in the deep profiling version of the Mercury runtime library when using
  GCC with the `-fno-common` option.

  Users of GCC 10 should note that `-fno-common` is now the default.

* [Mantis bug #513]. We have fixed a bug that caused the compiler to
  generate code that incorrectly reads variable values from the stack
  in disjunctions.

* [Github issue #90]. We have fixed a bug that the caused the compiler
  to abort on code that used type classes in lambda expressions.
